syntax = "proto2";

import "BaseHeaderOut.proto";
import "Product.proto";

option java_package = "com.oppo.pay.bean";

message PayQueryRequest {
    required BaseHeaderOut header = 1;
    required string payRequestId = 2; // 支付流水号
    optional string tradeType = 3; // 交易类型，区分无帐号支付、充值、消费、充值并消费
    optional string country = 4; // 国家代码
}

message PayQueryResponse {
    required bool isSuccess = 1; // 请求是否成功处理
    optional string code = 2; // 不成功时有返回码
    optional string msg = 3; // 不成功时有描述

    message PayTokenResponseData {
        required string payRequestId = 1; // 支付流水号
        required string partnerOrder = 2; // 商户订单号
        optional string country = 3; // 国家和地区
        optional string payType = 4; // 支付方式
        optional string channel = 5; // 支付渠道
        required string payAmount = 6; // 支付金额
        optional string currency = 7; // 币种
        required string status = 8; // 支付订单状态
        optional string settleDate = 9; // 状态为成功的交易有账期
        optional Product product = 10; // 商品

        message Fee {
            required string name = 1; // 费用名称
            required string amount = 2; // 金额
            required string currency = 3; // 币种
        }
        repeated Fee addtionalFees = 11; // 附加费用
        optional string businessType = 16; // 业务类型，某些情况下结算使用，比如游戏是单机还是网游

        optional string additionFeeAmount = 17; // 附加费用金额
        optional string cocoinRechargeAmount = 18; // 可币充值金额
        optional string cocoinSpendAmount = 19; // 可币消费金额
        optional string couponAmount = 20; // 优惠券抵扣金额
        optional string payDiscountAmount = 21; // 渠道优惠金额
        optional string cocoinGiftAmount = 22; // 可币优惠金额
    }
    optional PayTokenResponseData data = 4; // 不成功时此字段为空
}